--- a/index_resume_info.html
+++ b/index_resume_info.html
@@ -11,7 +11,7 @@
        <a class="menu-item" href="#education">Образование</a>
        <a class="menu-item" href="#skills">Навыки</a>
        <a class="menu-item" href="#achievements">Достижения</a>
-       <a class="menu-item" href="#">Контакты</a>
+       <a class="menu-item" href="#сontactss">Контакты</a>
    </div>
    <div id="main">
     <p id="heading">
